# anti-ip-attribution

./: .gitignore  Anti_IP_Surge.list  CONTRIBUTE.md  README.md  cfw.yaml  clash_rule_set.yaml  contribute.md  generate.py  generate_rule.py  parser-header.yaml  pyproject.toml  requirements.txt  rules.yaml
.github/workflows/: generate.yml  stale.yml
rules/: IT之家.yaml  Lofter.yaml  MIUI.yaml  NGA.yaml  QQ音乐.yaml  Soul.yaml  TapTap.yaml  其乐论坛.yaml  哔哩哔哩.yaml  国家反诈中心.yaml  头条.yaml  完美世界电竞App.yaml  小米社区.yaml  小红书.yaml  小黑盒.yaml  微信.yaml  微博.yaml  快手.yaml  懂球帝.yaml  抖音.yaml  文叔叔.yaml  斗鱼.yaml  森空岛.yaml  百度贴吧.yaml  知乎.yaml  米游社.yaml  网易云音乐.yaml  网易大神.yaml  虎扑.yaml  虎牙.yaml  西瓜视频.yaml  豆瓣.yaml  起点App.yaml  酷安.yaml
tests/: conftest.py  test_infrastructure_validation.py
